[package]
name = "tvnow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "2.0.4"
chrono = "0.4.26"
anyhow = "1.0"
once_cell = "1.18.0"
scraper = "0.17.1"

[dependencies.async-std]
version = "1.12.0"
features = ["unstable"]

[dependencies.surf]
version = "2.3.2"
default-features = false
features = ["h1-client-rustls"]