[package]
name = "tvnow"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "2.0.4"
chrono = "0.4"
anyhow = "1.0"
once_cell = "1.18.0"
scraper = "0.17.1"
htmlize = { version = "1.0.3", features = ["unescape"] }
futures = "0.3.30"

[dependencies.async-std]
version = "1.12.0"
features = ["unstable", "attributes"]

[dependencies.surf]
version = "2.3.2"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
