[package]
name = "tvnow"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "3.0.0"
chrono = "0.4"
anyhow = "1.0"
scraper = "0.23.1"
htmlize = { version = "1.0.5", features = ["unescape"] }
futures = "0.3.31"

[dependencies.async-std]
version = "1.13.1"
features = ["unstable", "attributes"]

[dependencies.surf]
version = "2.3.2"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
